--- a/ui/package.json
+++ b/ui/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@dnd-kit/core": "^3.0.3",
     "@dnd-kit/modifiers": "^2.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "concurrently": "^5.1.0",
+    "emailjs-com": "^2.6.4",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.0",
