--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7"
   }
 }
