--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.0",
+    "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
