--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "@dnd-kit/core": "^3.0.3",
     "@dnd-kit/modifiers": "^2.0.0",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/lab": "*",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,6 +16,7 @@
     "emailjs-com": "^2.6.4",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
+    "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.13.1",
