--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "concurrently": "^5.1.0",
     "emailjs-com": "^2.6.4",
     "json-server": "^0.16.1",
+    "randomcolor": "^0.6.2",
     "react": "^16.13.1",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
