--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "react-alert": "^7.0.3",
     "react-bootstrap": "^1.6.0",
     "react-canvas-draw": "^1.1.1",
+    "react-checkmark": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
