--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_CONNECTION = mongodb+srv://testuser:Dolev203191754@cluster0.2ddnb.mongodb.net/myFirstDatabase?retryWrites=true;
 TOKEN_SECRET = 34ffdg56546fgh;
+SEND_GRID = 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
